--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-slider": "^1.2.1",
     "@types/node": "20.6.2",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "devicons-react": "^1.3.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
@@ -23,6 +28,7 @@
     "react": "18.2.0",
     "react-devicons": "^2.16.2",
     "react-dom": "18.2.0",
+    "tailwind-merge": "^2.5.2",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   }
